// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestCases basic-type-error 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases basic-type-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases code-splitting-import-error 1`] = `
Object {
  "errors": Array [
    "xfile
(1,1): error TS2304",
    "xfile
(1,7): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases code-splitting-import-no-error 1`] = `
Object {
  "errors": Array [
    "xfile
(1,1): error TS2304",
    "xfile
(4,1): error TS2304",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases code-splitting-import-ts-dependency-error 1`] = `
Object {
  "errors": Array [
    "xfile
(1,1): error TS2304",
    "xfile
(1,7): error TS2322",
    "xfile
(3,22): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases code-splitting-import-ts-dependency-no-error 1`] = `
Object {
  "errors": Array [
    "xfile
(1,1): error TS2304",
    "xfile
(4,1): error TS2304",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases commonjs-usage 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases css-modules-error 1`] = `
Object {
  "errors": Array [
    "xfile
(3,20): error TS2339",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases css-modules-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases ignore-child-compiler-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases skip-type-check-on-build-error 1`] = `
Object {
  "errors": Array [
    "xfile
(3,1): error TS1005",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases ts-dependency-only-error 1`] = `
Object {
  "errors": Array [
    "xfile
(3,22): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases ts-dependency-only-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`TestCases tsconfig-invalid-option 1`] = `
Object {
  "errors": Array [
    "xfile
error TS5023: Unknown compiler option 'xxxx'.",
    "xfile
Module build failed: error while parsing tsconfig.json",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases tsconfig-syntax-error 1`] = `
Object {
  "errors": Array [
    "xfile
Module build failed: error TS5014: Failed to parse file 'xfile': Unexpected token } in JSON at position 218.",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases tslint-error 1`] = `
Object {
  "errors": Array [
    "xfile
  2:11  error  ' should be \\"  quotemark
",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases tslint-warning 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
  2:11  warning  ' should be \\"  quotemark
",
  ],
}
`;

exports[`TestCases use-library-type-definition-error 1`] = `
Object {
  "errors": Array [
    "xfile
(1,24): error TS7016",
  ],
  "warnings": Array [],
}
`;

exports[`TestCases use-library-type-definition-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;
